updating index page

--- a/SimmerTheToads/templates/index.html
+++ b/SimmerTheToads/templates/index.html
@@ -15,6 +15,11 @@
 </head>
 
 <body>
+    <header>
+        <a href="/about"> About </a> <br>
+        <a href="/login"> Login </a> <br>
+        
+    </header>
     <!--[if lt IE 8]>
             <p class="browserupgrade">
             You are using an <strong>outdated</strong> browser. Please
