--- a/frontend/src/css/Tabs.css
+++ b/frontend/src/css/Tabs.css
@@ -1,21 +1,6 @@
-.TabList {
-    background-color: #F1DAC4;
-    min-height: 60px;
-    list-style: none;
+
+div {
+    position:sticky;
+    top:0px;
 }
 
-.Tab {
-    float: left;
-    padding: 20px;
-    color: #283F3B;
-}
-
-.Tab:focus {
-    background-color: #283F3B;
-    color: #F1DAC4;
-}
-
-.TabPanel {
-    padding: 20px;
-    align-items: center;
-}
