--- a/frontend/src/css/App.css
+++ b/frontend/src/css/App.css
@@ -28,7 +28,6 @@
   color: #61dafb;
 }
 
-
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -36,4 +35,10 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.viewportDiv .App {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
 }
