--- a/frontend/src/css/SongList.css
+++ b/frontend/src/css/SongList.css
@@ -1,9 +1,9 @@
-table, th, td {
-    border: 1px solid;
-    border-color: black;
-    padding: 5px;
-    border-collapse: collapse;
-    width: 50%
+table,
+th,
+td {
+  border: 1px solid;
+  border-color: black;
+  padding: 5px;
+  border-collapse: collapse;
+  width: 50%;
 }
-
-
